--- a/_sass/buttons.scss
+++ b/_sass/buttons.scss
@@ -1,5 +1,5 @@
 // Created by ge on 1/25/16.
-@import "./selection";
+@import "selection";
 
 // todo: need to finish the button mixin to use as standard button styling.
 @mixin base-button($className,
