--- a/front-page/index.scss
+++ b/front-page/index.scss
@@ -134,6 +134,9 @@ $navbar-height: 50px;
     height: $navbar-height;
     line-height: $navbar-height;
   }
+  .fixed-spacer {
+    @include flex-fixed();
+  }
   .item {
     @include flex-fixed();
     padding: 0 15px;
@@ -194,20 +197,12 @@ $navbar-height: 50px;
 
 
 // animations
-@mixin fade-in-keyframe () {
-  @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-}
-@mixin fade-in-animation ($selector, $duration, $delay:0) {
-  #{$selector} {
-    opacity:0;  /* make things invisible upon start */
-    animation:fadeIn ease-in 1; // run only one time
-    animation-fill-mode:forwards;
-    animation-duration: $duration;
-    animation-delay: $delay;
-  }
-}
 
+@import "fade-in";
 @include fade-in-keyframe();
-@include fade-in-animation('.fade-in-30-0', 0.3s, 0s);
-@include fade-in-animation('.fade-in-100-100', 1s, 1s);
+@include fade-in-animation('.fade-in-header', 0.8s, 0s);
+@include fade-in-animation('.fade-in-0-100', 0s, 1s);
+@include fade-in-animation('.fade-in-1', 0.8s, 1.5s);
+@include fade-in-animation('.fade-in-2', 0.8s, 1.65s);
+@include fade-in-animation('.fade-in-3', 0.8s, 1.8s);
 
