--- a/front-page/index.scss
+++ b/front-page/index.scss
@@ -38,6 +38,7 @@ $md-w: ($md-h * 1.25);
     }
   }
 }
+
 @media (min-width: $sm-w) {
   .fixed-hero .header-box {
     width: 500px;
@@ -116,8 +117,13 @@ $page-width: 900px;
 }
 
 $navbar-height: 50px;
+$item-padding: 12px;
 .fixed-navbar {
   // style
+  color: black;
+  a {
+    color: black;
+  }
   transition: all 0.15s linear;
   font-size: 90%;
   font-family: 'Gotham', sans-serif;
@@ -129,7 +135,8 @@ $navbar-height: 50px;
   // layout
   position: fixed;
   width: 100%;
-  left: auto; right: auto;
+  left: auto;
+  right: auto;
   z-index: 1;
 
   height: $navbar-height;
@@ -144,7 +151,13 @@ $navbar-height: 50px;
   }
   .item {
     @include flex-fixed();
-    padding: 0 15px;
+    padding: 0 ($item-padding/2);
+    &:first-child {
+      padding-left: $item-padding;
+    }
+    &:last-child {
+      padding-right: $item-padding;
+    }
     &:hover {
       background-color: rgba(black, 0.025);
     }
@@ -196,10 +209,59 @@ $navbar-height: 50px;
 }
 
 .content-container {
+  // styling
+  // layout
   min-height: 120%;
   background-color: #f7f7f7;
+  padding: ($navbar-height + 25px) 40px;
+  @include flex-row-container();
+  flex-wrap: wrap;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: flex-start;
+  .card {
+    margin: 20px;
+    @include flex-fixed();
+  }
 }
 
+$card-width: 300px;
+$radius: 12px;
+.content-container .card {
+  // style
+  .text-container {
+    background-color: white;
+    padding: 14px 15px 16px;
+  }
+  img.feature {
+    border-radius: $radius $radius 0 0;
+  }
+  .text-container {
+    border-radius: 0 0 $radius $radius;
+  }
+  h1 {
+    color: black;
+    font-size: 120%;
+    line-height: 1.3;
+    margin-bottom: 8px;
+  }
+  p {
+    color: #777;
+    font-size: 80%;
+  }
+
+
+  // layout
+  width: $card-width;
+  img.feature {
+    position: relative;
+    width: auto;
+    height: auto;
+    max-width: $card-width
+  }
+  .text-container {
+  }
+}
 
 // animations
 
@@ -210,4 +272,5 @@ $navbar-height: 50px;
 @include fade-in-animation('.fade-in-1', 0.8s, 1.5s);
 @include fade-in-animation('.fade-in-2', 0.8s, 1.65s);
 @include fade-in-animation('.fade-in-3', 0.8s, 1.8s);
+
 
