add body.container height so that firefox gets the child height correctly

--- a/front-page/index.scss
+++ b/front-page/index.scss
@@ -103,6 +103,8 @@ body.page-container {
 
   // layout
   position: relative;
+  height: 100%; // needed for firefox to determine child element height correctly.
+  width: 100%;
   @include touch-scroll(y);
   overflow-x: hidden;
 }
