--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,9 +3,9 @@
         <a class="item" href="/about" style="color: white;">About</a>
         <div class="fixed-spacer" style="width: 40px;"></div>
         <div class="spacer"></div>
-        <a class="item emphasis" href="">G.Y</a>
+        <a class="item emphasis" href="/">G.Y</a>
         <div class="spacer"></div>
         <a class="item" href="/#projects">Work</a>
-        <a class="item" href="blog">Blog</a>
+        <a class="item" href="/blog">Blog</a>
     </div>
 </div>
