--- a/blog/index.scss
+++ b/blog/index.scss
@@ -6,14 +6,13 @@
 
 .page-container {
   background-color: #fafafa;
-  .post-list-container {
-    background-color: #fafafa;
-  }
+  //.post-list-container {
+  //  background-color: #fafafa;
+  //}
 }
 
 .post-list-container {
   // style
-
   .post-card-view {
     color: rgba(black, 0.8);
     font-family: Georgia, Cambria, "Times New Roman", Times, serif;;
@@ -26,7 +25,7 @@
 
     background-color: white;
     padding: 15px 15px;
-    margin: 0 auto 20px auto;
+    margin: 20px auto 20px auto;
 
     a {
       color: black;
