--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>{{page.title}}</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0001, maximum-scale=1.0001">
     <link href="/posts/index.css" rel="stylesheet">
     <script src="/posts/index.js"></script>
     <link rel="stylesheet" href="/posts/syntax.css" type="text/css"/>
