--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>{{page.title}}</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0001, maximum-scale=1.0001">
     <link href="/posts/index.css" rel="stylesheet">
     <script src="/posts/index.js"></script>
     {% if page.mathJax %}
@@ -14,7 +15,7 @@
 </head>
 <body class="page-container">
     {% include navbar.html %}
-<div class="post-content">{{content}}</div>
+<div class="post-content {{page.postLayout}}">{{content}}</div>
 <div class="recommendation-footer"></div>
 </body>
 </html>
