--- a/blog/index.scss
+++ b/blog/index.scss
@@ -68,11 +68,8 @@
   padding: 30px 0;
   article.post-card-view {
     .image.full-width-block {
-
     }
   }
-
-
 }
 
 $article-width: 700px;
@@ -82,7 +79,6 @@ $sm-bp: $article-width / 0.9;
     article.post-card-view {
       max-width: $article-width;
     }
-
   }
 }
 @media (max-width: ($sm-bp - 1px)) {
@@ -90,6 +86,11 @@ $sm-bp: $article-width / 0.9;
     article.post-card-view {
       max-width: 90%;
     }
+    h2 {
+      font-size: 22px !important;
+    }
+    h3 {
+      font-size: 18px !important;
+    }
   }
-
 }
