--- a/front-page/index.scss
+++ b/front-page/index.scss
@@ -168,10 +168,13 @@ $page-width: 900px;
   .arrow, .label {
     position: absolute;
     bottom: 0;
-    left: 0; right: 0;
+    left: 0;
+    right: 0;
     margin: 0 auto;
   }
-  .arrow{width: 0;}
+  .arrow {
+    width: 0;
+  }
   $label-height: 25px;
   .label {
     width: 60px;
@@ -186,6 +189,7 @@ $page-width: 900px;
 #projects.section {
   min-height: 100%;
 }
+
 .section {
   // styling
   .section-header {
@@ -206,7 +210,7 @@ $page-width: 900px;
   // layout
   box-sizing: border-box;
   background-color: #f7f7f7;
-  padding: ($navbar-height) 40px;
+  padding: ($navbar-height) 0;
   @include flex-row-container();
   flex-wrap: wrap;
   align-items: flex-start;
@@ -214,7 +218,8 @@ $page-width: 900px;
   justify-content: flex-start;
   .card {
     position: relative;
-    margin: 20px;
+    box-sizing: border-box;
+    margin: 20px 0;
     @include flex-fixed();
   }
   .card .hover-cover {
@@ -255,15 +260,81 @@ $page-width: 900px;
   }
 }
 
-$card-width: 300px;
-$radius: 12px;
+.section {
+  position: relative;
+}
+
+$card-width: 400px;
+$gutter-width: 40px;
+$sm-bp: $card-width * 2 + $gutter-width * 4;
+$md-bp: $card-width * 3 + $gutter-width * 6;
+$lg-bp: $card-width * 4 + $gutter-width * 8;
+$radius: 0px;
+@media (max-width: ($sm-bp - 1px)) {
+  .section-header {
+    padding-left: 2.5%;
+  }
+  .section .card {
+    font-size: 20px;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (min-width: $sm-bp) and (max-width: ($md-bp - 1px)) {
+  $gutter: 2.5%;
+  .section {
+    padding-left: $gutter/2;
+    padding-right: $gutter/2;
+  }
+  .section .card {
+    font-size: 20px;
+    width: ((100% - $gutter * 2)/ 2.0);
+    margin-left: $gutter/2;
+    margin-right: $gutter/2;
+  }
+}
+
+@media (min-width: $md-bp) and (max-width: ($lg-bp - 1px)) {
+  $gutter: 2%;
+  .section {
+    padding-left: $gutter/2;
+    padding-right: $gutter/2;
+  }
+  .section .card {
+    font-size: 20px;
+    width: (( 100% - $gutter * 3) / 3.0);
+    margin-left: $gutter /2;
+    margin-right: $gutter/2;
+  }
+}
+
+@media (min-width: $lg-bp) {
+  $gutter: 1.0%;
+  .section {
+    padding-left: $gutter/2;
+    padding-right: $gutter/2;
+  }
+  .section .card {
+    font-size: 20px;
+    width: (( 100% - $gutter * 4) / 4.0);
+    margin-left: $gutter/2;
+    margin-right: $gutter/2;
+  }
+}
+
+@import "full-width";
 .section .card {
+
+  position: relative;
+
   // style
   .text-container {
     background-color: white;
     padding: 14px 15px 16px;
   }
-  img.feature {
+  .image.feature {
     border-radius: $radius $radius 0 0;
   }
   .text-container {
@@ -287,13 +358,6 @@ $radius: 12px;
   }
 
   // layout
-  width: $card-width;
-  img.feature {
-    position: relative;
-    width: auto;
-    height: auto;
-    max-width: $card-width
-  }
   .text-container {
   }
 }
