--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -126,5 +126,9 @@
     .float img {
       width: 100%;
     }
+    iframe {
+      // iframe is inline by default per the html4 specification
+      display: block;
+    }
   }
 }
