--- a/front-page/index.scss
+++ b/front-page/index.scss
@@ -224,10 +224,9 @@ $page-width: 900px;
   }
   .card .hover-cover {
     // style default
-    opacity: 0;
-    background-color: rgba(#555, .80);
+    background-color: rgba(#222, .90);
 
-    transition: opacity 0.3s ease;
+    transition: all 0.3s ease;
 
     // layout
     padding: 0;
@@ -250,7 +249,7 @@ $page-width: 900px;
     display: block;
     &:hover .hover-cover {
       display: block;
-      opacity: 1;
+      background-color: rgba(#555, .20);
     }
   }
   .section-header {
