add google analytics tracking

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0001, maximum-scale=1.0001">
     <link href="/posts/index.css" rel="stylesheet">
+    {% include google-analytics.html %}
     <script src="/posts/index.js"></script>
     {% if page.mathJax %}
     <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
