--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{{page.title}}</title>
     <link rel="stylesheet" href="/about/index.css" type="text/css"/>
+    {% include google-analytics.html %}
 </head>
 <body class="page-container">
     {% include navbar.html %}
