--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0001, maximum-scale=1.0001">
     <link href="/posts/index.css" rel="stylesheet">
+    {% include google-analytics.html %}
     <script src="/posts/index.js"></script>
     <link rel="stylesheet" href="/posts/syntax.css" type="text/css"/>
     <link rel="stylesheet" href="/blog/article-excerpt.css" type="text/css"/>
