--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         <meta property="og:title" content="{{page.title}}"/>
         <meta property="og:type" content="article"/>
         <meta property="og:url" content="http://www.episodeyang.com/"/>
-        <meta property="og:image" content="{{page.snippet}}"/>
+        <meta property="og:image" content="http://www.episodeyang.com{{page.snippet}}"/>
         <meta property="og:description" content="{{page.summary || page.excerpt}}"/>
         {% include google-analytics.html %}
     </head>
