fix page url in the meta tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         <!-- Open Graph data -->
         <meta property="og:title" content="{{page.title}}"/>
         <meta property="og:type" content="article"/>
-        <meta property="og:url" content="http://www.episodeyang.com/"/>
+        <meta property="og:url" content="http://www.episodeyang.com{{page.url}}"/>
         <meta property="og:image" content="http://www.episodeyang.com{{page.snippet}}"/>
         <meta property="og:description" content="{{page.excerpt}}"/>
         {% include google-analytics.html %}
