fix front-page layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,13 @@
         <meta name="description" content="{{page.excerpt}}"/>
 
         <!-- Twitter Card data -->
-        <meta name="twitter:card" value="{{page.excerpt}}">
+        <meta name="twitter:card" value="http://www.episodeyang.com{{page.snippet}}">
+        <meta name="twitter:site" content="@episodeyang">
+        <meta name="twitter:title" content="{{page.title}}">
+        <meta name="twitter:description" content="{{page.excerpt}}">
+        <meta name="twitter:creator" content="@episodeyang">
+        <!-- Twitter summary card with large image must be at least 280x150px -->
+        <meta name="twitter:image:src" content="http://www.episodeyang.com{{page.snippet}}">
 
         <!-- Open Graph data -->
         <meta property="og:title" content="{{page.title}}"/>
