do not run the onScroll event, hide nav-bar content with css

--- a/front-page/index.scss
+++ b/front-page/index.scss
@@ -119,6 +119,11 @@ $page-width: 900px;
 }
 
 @import "navbar.scss";
+.fixed-navbar {
+  > * {
+    top: -40px;
+  }
+}
 
 .fixed-hero {
   // styles
