add github link

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <div class="fixed-navbar">
     <div class="page-width-container">
-        <a class="item" href="/about" style="color: white;">About</a>
-        <div class="fixed-spacer" style="width: 40px;"></div>
+        <a class="item" href="https://github.com/episodeyang">Github</a>
+        <div class="fixed-spacer" style="width: 30px;"></div>
         <div class="spacer"></div>
         <a class="item emphasis" href="/">G.Y</a>
         <div class="spacer"></div>
