--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>{{page.title}}</title>
-        <meta name="description" content="{{page.excerpt | strip_html}}"/>
+<head>
+    <title>{{page.title}}</title>
+    <meta name="description" content="{{page.excerpt | strip_html}}"/>
 
-        <!-- Twitter Card data -->
-        <meta name="twitter:card" value="http://www.episodeyang.com{{page.snippet}}">
-        <meta name="twitter:site" content="@episodeyang">
-        <meta name="twitter:title" content="{{page.title}}">
-        <meta name="twitter:description" content="{{page.excerpt | strip_html}}">
-        <meta name="twitter:creator" content="@episodeyang">
-        <!-- Twitter summary card with large image must be at least 280x150px -->
-        <meta name="twitter:image:src" content="http://www.episodeyang.com{{page.snippet}}">
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" value="http://www.episodeyang.com{{page.snippet}}">
+    <meta name="twitter:site" content="@episodeyang">
+    <meta name="twitter:title" content="{{page.title}}">
+    <meta name="twitter:description" content="{{page.excerpt | strip_html}}">
+    <meta name="twitter:creator" content="@episodeyang">
+    <!-- Twitter summary card with large image must be at least 280x150px -->
+    <meta name="twitter:image:src" content="http://www.episodeyang.com{{page.snippet}}">
 
-        <!-- Open Graph data -->
-        <meta property="og:title" content="{{page.title}}"/>
-        <meta property="og:type" content="article"/>
-        <meta property="og:url" content="http://www.episodeyang.com{{page.url}}"/>
-        <meta property="og:image" content="http://www.episodeyang.com{{page.snippet}}"/>
-        <meta property="og:description" content="{{page.excerpt | strip_html}}"/>
-        {% include google-analytics.html %}
-    </head>
-    {{ content }}
+    <!-- Open Graph data -->
+    <meta property="og:title" content="{{page.title}}"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:url" content="http://www.episodeyang.com{{page.url}}"/>
+    <meta property="og:image" content="http://www.episodeyang.com{{page.snippet}}"/>
+    <meta property="og:description" content="{{page.excerpt | strip_html}}"/>
+    {% include google-analytics.html %}
+</head>
+{{ content }}
+<script>
+    ((window.gitter = {}).chat = {}).options = {room: 'episodeyang/episodeyang.github.io'};
+    (function () {
+        document.addEventListener('gitter-sidecar-instance-started',
+            function () {
+                var button = document.querySelector('.gitter-open-chat-button');
+                button.textContent = 'CHAT With GE';
+                button.style['background-color'] = '#676767';
+                button.style['padding'] = '10px 15px';
+            }
+        )
+    }())
+</script>
+<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
 </html>
