add link to npm

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,13 @@
 <div class="fixed-navbar">
     <div class="page-width-container">
-        <a class="item" href="https://github.com/episodeyang">Github</a>
-        <div class="fixed-spacer" style="width: 30px;"></div>
+        <a class="item" href="https://github.com/episodeyang">GitHub</a>
+        <a class="item" href="https://www.npmjs.com/~episodeyang">
+            <img src="https://www.npmjs.com/static/images/npm-logo.svg">
+        </a>
+        <!--<a class="item" href="https://www.linkedin.com/in/ge-yang-8a2b0216">-->
+            <!--<img src="https://www.linkedin.com/scds/common/u/images/logos/linkedin/logo_in_nav_retina_88x72.png">-->
+        <!--</a>-->
+        <!--<div class="fixed-spacer" style="width: 30px;"></div>-->
         <div class="spacer"></div>
         <a class="item emphasis" href="/">G.Y</a>
         <div class="spacer"></div>
